--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
